# meeting_device

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  audio.cpp  audio.h  ble.cpp  ble.h  configs.h  device.cpp  device.h  main.cpp  mini_gpio.c  mini_gpio.h  minimal_gpio.c  objects.c  objects.h  parameters.c  parameters.h  threads.c  threads.h
